Fixed tooltip overlaping in search

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -2256,7 +2256,7 @@
 			transition: all 0.5s ease;
 			position: absolute;
 			top: calc(100% + 1em);//6.25em;
-			left: 1em;
+			right: 1em;
 			z-index: 1;
 			background-color: rgba(0, 0, 0, 0.9);
 			color: #fff;
